Alteração de ícone

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                   class="li-icon3"> <b>GitHub
                   Repository: </b> Ferkze </a> </li>
             <li> <a href="https://stackoverflow.com/users/9870486/ferkze" target="_blank"><img
-                  src="./images/media/stackoverflow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
+                  src="./images/media/stackoverflow.png" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
         </div>
       </section>
