--- a/pt/index.html
+++ b/pt/index.html
@@ -203,7 +203,7 @@
             </li>
             <li> <a href="https://github.com/Ferkze/"> <img src="../images/media/github.png" class="li-icon3"> <b>GitHub
                   Repository: </b> Ferkze </a> </li>
-            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="../images/media/stackoverflow.jpg"
+            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="../images/media/stackoverflow.png"
                   class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
         </div>
