Lazy loading de imagens e agrupamento de css

--- a/pt/index.html
+++ b/pt/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>FABIO Ferkze</title>
     <link rel="stylesheet" type="text/css" href="../home.css">
-    <link rel="stylesheet" type="text/css" href="../lang.css">
-    <link rel="stylesheet" type="text/css" href="../utilities.css">
     <link rel="icon" href="../images/langs/codeIcon1.png">
   </head>
 
@@ -73,30 +71,30 @@
             <h3>Stacks</h3>
             <ul>
               <li>
-                <img class="li-icon2" src="../images/langs/java.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/java.png">
                 <span>Java</span>
                 <span class="obs">
-                  <img class="li-icon" src="../images/langs/spring.svg">Spring
+                  <img loading="lazy" class="li-icon" src="../images/langs/spring.svg">Spring
                 </span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/go.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/go.png">
                 <span>Golang</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/node.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/node.png">
                 <span>Node.js</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/typescript.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/typescript.png">
                 <span>TypeScript</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/angular.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/angular.png">
                 <span>Angular</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/vue.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/vue.png">
                 <span>Vue.js</span>
               </li>
             </ul>
@@ -104,19 +102,19 @@
             <h3>Ferramentas</h3>
             <ul>
               <li>
-                <img class="li-icon2" src="../images/langs/aws.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/aws.png">
                 <span>AWS</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/azure.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/azure.png">
                 <span>Azure</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/gcp.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/gcp.png">
                 <span>Google Cloud</span>
               </li>
               <li>
-                <img class="li-icon2" src="../images/langs/docker.png">
+                <img loading="lazy" class="li-icon2" src="../images/langs/docker.png">
                 <span>Docker</span>
               </li>
             </ul>
@@ -124,25 +122,25 @@
             <h3>Idiomas</h3>
             <ul>
               <li>
-                <img class="li-icon2" style="margin-right: -3px;" src="../images/flags/usa.png">
+                <img loading="lazy" class="li-icon2" style="margin-right: -3px;" src="../images/flags/usa.png">
                 <span>Inglês</span>
               </li>
               <li>
-                <img class="li-icon" src="../images/flags/brazil.jpg">
+                <img loading="lazy" class="li-icon" src="../images/flags/brazil.jpg">
                 <span>Português</span>
               </li>
               <li>
-                <img class="li-icon" src="../images/flags/spain.jpg">
+                <img loading="lazy" class="li-icon" src="../images/flags/spain.jpg">
                 <span>Espanhol</span>
               </li>
               <li>
-                <img class="li-icon" src="../images/flags/china.png">
+                <img loading="lazy" class="li-icon" src="../images/flags/china.png">
                 <span>Chinês (Mandarim)</span>
               </li>
             </ul>
           </div>
           <article class="personal">
-            <img src="../images/meIcon.png" alt="Fabio">
+            <img loading="lazy" src="../images/meIcon.png" alt="Fabio">
             <h2>Quem sou eu?</h2>
             <ul>
               <li>Fabio Gonçalves Martins</li>
@@ -185,26 +183,30 @@
             <li>
               <h2>Contato Principal</h2>
             </li>
-            <li> <img class="li-icon3" src="../images/media/gmail.jpg"> <b>Email: </b> ferkze@gmail.com </li>
+            <li> <img loading="lazy" class="li-icon3" src="../images/media/gmail.jpg"> <b>Email: </b> ferkze@gmail.com
+            </li>
           </ul>
           <ul>
             <li>
               <h2>Redes Sociais</h2>
             </li>
-            <li> <a href="http://instagram.com/ferkze"> <img class="li-icon3" src="../images/media/insta.jpg">
+            <li> <a href="http://instagram.com/ferkze"> <img loading="lazy" class="li-icon3"
+                  src="../images/media/insta.jpg">
                 <b>Instagram: </b> ferkze </a> </li>
             <li> <a href="https://www.linkedin.com/in/ferkze/" target="_blank" rel="noopener noreferrer"><img
-                  class="li-icon3" src="../images/media/linkedin.png"> <b>LinkedIn: </b> Fabio Martins</a>
+                  loading="lazy" class="li-icon3" src="../images/media/linkedin.png"> <b>LinkedIn: </b> Fabio
+                Martins</a>
             </li>
           </ul>
           <ul>
             <li>
               <h2>Comunidade</h2>
             </li>
-            <li> <a href="https://github.com/Ferkze/"> <img src="../images/media/github.png" class="li-icon3"> <b>GitHub
+            <li> <a href="https://github.com/Ferkze/"> <img loading="lazy" src="../images/media/github.png"
+                  class="li-icon3"> <b>GitHub
                   Repository: </b> Ferkze </a> </li>
-            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="../images/media/stackoverflow.png"
-                  class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
+            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img loading="lazy"
+                  src="../images/media/stackoverflow.png" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
         </div>
       </section>
