--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>FABIO Ferkze</title>
     <link rel="stylesheet" type="text/css" href="./home.css">
-    <link rel="stylesheet" type="text/css" href="./lang.css">
-    <link rel="stylesheet" type="text/css" href="./utilities.css">
     <link rel="icon" href="./images/langs/codeIcon1.png">
   </head>
 
@@ -73,30 +71,30 @@
             <h3>Tech stack</h3>
             <ul>
               <li>
-                <img class="li-icon2" src="./images/langs/java.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/java.png">
                 <span>Java</span>
                 <span class="obs">
-                  <img class="li-icon" src="./images/langs/spring.svg">Spring Boot
+                  <img loading="lazy" class="li-icon" src="./images/langs/spring.svg">Spring Boot
                 </span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/go.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/go.png">
                 <span>Golang</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/node.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/node.png">
                 <span>Node.js</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/typescript.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/typescript.png">
                 <span>TypeScript</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/angular.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/angular.png">
                 <span>Angular</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/vue.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/vue.png">
                 <span>Vue.js</span>
               </li>
             </ul>
@@ -104,19 +102,19 @@
             <h3>Tools</h3>
             <ul>
               <li>
-                <img class="li-icon2" src="./images/langs/aws.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/aws.png">
                 <span>AWS</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/azure.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/azure.png">
                 <span>Azure</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/gcp.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/gcp.png">
                 <span>Google Cloud</span>
               </li>
               <li>
-                <img class="li-icon2" src="./images/langs/docker.png">
+                <img loading="lazy" class="li-icon2" src="./images/langs/docker.png">
                 <span>Docker</span>
               </li>
             </ul>
@@ -124,19 +122,19 @@
             <h3>Languages</h3>
             <ul>
               <li>
-                <img class="li-icon2" style="margin-right: -3px;" src="./images/flags/usa.png">
+                <img loading="lazy" class="li-icon2" style="margin-right: -3px;" src="./images/flags/usa.png">
                 <span>English</span>
               </li>
               <li>
-                <img class="li-icon" src="./images/flags/brazil.jpg">
+                <img loading="lazy" class="li-icon" src="./images/flags/brazil.jpg">
                 <span>Portuguese</span>
               </li>
               <li>
-                <img class="li-icon" src="./images/flags/spain.jpg">
+                <img loading="lazy" class="li-icon" src="./images/flags/spain.jpg">
                 <span>Spanish</span>
               </li>
               <li>
-                <img class="li-icon" src="./images/flags/china.png">
+                <img loading="lazy" class="li-icon" src="./images/flags/china.png">
                 <span>Chinese (Mandarim)</span>
                 <span class="obs">
                   HSK3
@@ -145,7 +143,7 @@
             </ul>
           </div>
           <article class="personal">
-            <img src="./images/meIcon.png" alt="Fabio">
+            <img loading="lazy" src="./images/meIcon.png" alt="Fabio">
             <h2>Whoami?</h2>
             <ul>
               <li>Fabio Goncalves Martins</li>
@@ -190,13 +188,14 @@
             <li>
               <h2>Direct Contact</h2>
             </li>
-            <li> <img class="li-icon3" src="./images/media/gmail.jpg"> <b>Email: </b> ferkze@gmail.com </li>
+            <li> <img loading="lazy" class="li-icon3" src="./images/media/gmail.jpg"> <b>Email: </b> ferkze@gmail.com
+            </li>
           </ul>
           <ul>
             <li>
               <h2>Social Media</h2>
             </li>
-            <li> <a href="http://instagram.com/ferkze" target="_blank"> <img class="li-icon3"
+            <li> <a href="http://instagram.com/ferkze" target="_blank"> <img loading="lazy" class="li-icon3"
                   src="./images/media/insta.jpg">
                 <b>Instagram: </b> ferkze </a> </li>
             <li> <a href="https://www.linkedin.com/in/ferkze/" target="_blank" rel="noopener noreferrer"><img
@@ -207,8 +206,8 @@
             <li>
               <h2>Community</h2>
             </li>
-            <li> <a href="https://github.com/Ferkze/" target="_blank"> <img src="./images/media/github.png"
-                  class="li-icon3"> <b>GitHub
+            <li> <a href="https://github.com/Ferkze/" target="_blank"> <img loading="lazy"
+                  src="./images/media/github.png" class="li-icon3"> <b>GitHub
                   Repository: </b> Ferkze </a> </li>
             <li> <a href="https://stackoverflow.com/users/9870486/ferkze" target="_blank"><img
                   src="./images/media/stackoverflow.png" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
