Implementation of portfolio timeline

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>FABIO Ferkze</title>
     <link rel="stylesheet" type="text/css" href="./home.css">
+    <link rel="stylesheet" type="text/css" href="./build/stylesheets/index.css">
     <link rel="icon" href="./images/langs/codeIcon1.png">
   </head>
 
@@ -74,7 +75,7 @@
                 <img loading="lazy" class="li-icon2" src="./images/langs/java.png">
                 <span>Java</span>
                 <span class="obs">
-                  <img loading="lazy" class="li-icon" src="./images/langs/spring.svg">Spring Boot
+                  <img loading="lazy" class="li-icon" src="./images/langs/spring.svg"> Spring Boot
                 </span>
               </li>
               <li>
@@ -167,16 +168,109 @@
               </h4>
               <p> <b>Situation: </b> Concluded in December of 2017</p>
             </div>
-            <hr>
-            <br>
-            <h2>Professional Experiences <span class="obs">Coming soon</span></h2>
-            <br>
+
           </article>
 
         </div>
       </section>
       <section class="portfolio">
         <h1 id="portfolio" class="title">Portfolio</h1>
+        <div>
+          <section id="timeline">
+            <div class="demo-card-wrapper">
+              <div class="demo-card demo-card--step1">
+                <div class="head">
+                  <div class="number-box">
+                    <span>2021</span>
+                  </div>
+                  <h2><span class="small">Software Engineer</span> MARISA</h2>
+                </div>
+                <div class="card-body">
+                  <p>Developed a backend system for +30 insurace products sold in Marisa APP, viewed by 1.7M daily
+                    active users.</p>
+                  <p>
+                    <img loading="lazy" class="li-icon2" alt="java" src="./images/langs/java.png">
+                    <img loading="lazy" class="li-icon2" alt="spring" src="./images/langs/spring.svg">
+                    <img loading="lazy" class="li-icon2" alt="apache-kafka" src="./images/langs/apache-kafka.svg">
+                    <img loading="lazy" class="li-icon2" alt="docker" src="./images/langs/docker.png">
+                    <img loading="lazy" class="li-icon2" alt="kubernetes" src="./images/langs/kubernetes.svg">
+                    <img loading="lazy" class="li-icon2" alt="oracle" src="./images/langs/oracle.svg">
+                  </p>
+                  <img class="card-img" src="./images/portfolio/marisa.png" alt="MARISA">
+                </div>
+              </div>
+
+              <div class="demo-card demo-card--step2">
+                <div class="head">
+                  <div class="number-box">
+                    <span>2020</span>
+                  </div>
+                  <h2><span class="small">PRINCIPAL DEVELOPER</span> GRAN FINANCE</h2>
+                </div>
+                <div class="card-body">
+                  <p>Designed and developed the SaaS from scratch, with 10+ features to help track personal and family
+                    transacions and define income sources and expense budgets.</p>
+                  <p>
+                    <img loading="lazy" class="li-icon2" alt="vue.js" src="./images/langs/vue.png">
+                    <img loading="lazy" class="li-icon2" alt="typescript" src="./images/langs/typescript.png">
+                    <img loading="lazy" class="li-icon2" alt="node.js" src="./images/langs/node.png">
+                    <img loading="lazy" class="li-icon2" alt="amazon web services" src="./images/langs/aws.png">
+                    <img loading="lazy" class="li-icon2" alt="firebase" src="./images/langs/firebase.svg">
+                    <img loading="lazy" class="li-icon2" alt="docker" src="./images/langs/docker.png">
+                    <img loading="lazy" class="li-icon2" alt="mongodb" src="./images/langs/mongodb.svg">
+                  </p>
+                  <img class="card-img" src="./images/portfolio/gran.png" alt="GRAN">
+                </div>
+              </div>
+
+              <div class="demo-card demo-card--step3">
+                <div class="head">
+                  <div class="number-box">
+                    <span>2019</span>
+                  </div>
+                  <h2><span class="small">Full Stack Developer</span> Benefício Fácil</h2>
+                </div>
+                <div class="card-body">
+                  <p>Developed an internal full-stack project to migrate features and batch processes from
+                    legacy systems, saving up to US$ 15.000 each month of cloud costs.</p>
+                  <p>
+                    <img loading="lazy" class="li-icon2" alt="golang" src="./images/langs/go.png">
+                    <img loading="lazy" class="li-icon2" alt="vue.js" src="./images/langs/vue.png">
+                    <img loading="lazy" class="li-icon2" alt="google cloud" src="./images/langs/gcp.png">
+                    <img loading="lazy" class="li-icon2" alt="java" src="./images/langs/java.png">
+                    <img loading="lazy" class="li-icon2" alt="docker" src="./images/langs/docker.png">
+                    <img loading="lazy" class="li-icon2" alt="kubernetes" src="./images/langs/kubernetes.svg">
+                    <img loading="lazy" class="li-icon2" alt="mysql" src="./images/langs/mysql.svg">
+                  </p>
+                  <img class="card-img" src="./images/portfolio/bf.png" alt="BENEFICIO FACIL">
+                </div>
+              </div>
+
+              <div class="demo-card demo-card--step4">
+                <div class="head">
+                  <div class="number-box">
+                    <span>2018</span>
+                  </div>
+                  <h2><span class="small">FULL STACK DEVELOPER</span> CEFIS</h2>
+                </div>
+                <div class="card-body">
+                  <p>Started the develpment of event-driven system to fire emails and push notifications for up to 100k
+                    active users.</p>
+                  <p>
+                    <img loading="lazy" class="li-icon2" alt="vue.js" src="./images/langs/vue.png">
+                    <img loading="lazy" class="li-icon2" alt="node.js" src="./images/langs/node.png">
+                    <img loading="lazy" class="li-icon2" alt="amazon web services" src="./images/langs/aws.png">
+                    <img loading="lazy" class="li-icon2" alt="docker" src="./images/langs/docker.png">
+                    <img loading="lazy" class="li-icon2" alt="mysql" src="./images/langs/mysql.svg">
+                    <img loading="lazy" class="li-icon2" alt="mongodb" src="./images/langs/mongodb.svg">
+                  </p>
+                  <img class="card-img" src="./images/portfolio/cefis.png" alt="CEFIS">
+                </div>
+              </div>
+
+            </div>
+          </section>
+        </div>
       </section>
       <section>
         <h1 id="sobremim" class="title">About me</h1>
