Activation of portfolio menu item

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <p>Email and social media</p>
           </div>
         </div>
-        <div class="category category-disabled" id="portfolioBub">
-          <img src="./images/timeIcon.png" alt="Portfolio">
+        <div class="category" id="portfolioBub">
+          <img src="./images/coffeeIcon.png" alt="Coffee">
           <div class="description">
             <h1><a href="#portfolio"> Portfolio </a></h1>
-            <p>Under development</p>
+            <p>Timeline of professional projects</p>
           </div>
         </div>
         <div class="category category-disabled" id="aboutmeBub">
