Change of timeline's background

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <img loading="lazy" src="./images/meIcon.png" alt="Fabio">
             <h2>Whoami?</h2>
             <ul>
-              <li>Fabio Goncalves Martins</li>
+              <li>Fabio Gonçalves Martins</li>
               <li>20 years old</li>
               <li>Currently living in Sao Paulo, Brazil</li>
               <li>Involved in meaningful software projects since 2017</li>
